BUG FIX (Feature navigation): IE: Overflowing arrows and no bg overlay
No bg overlay:
	- The BG overlay was hidden because of the fallback CSS background
	  image. Added z-index: -1

Overflowing arrows:
	- Added overflow: hidden; to .frame

--- a/style.css
+++ b/style.css
@@ -2182,6 +2182,7 @@ em {
 .frame {
 	background-color: #fff;
 	z-index: 10;
+	overflow: hidden;
 
 	will-change: transform;
 	transform: translateZ(0);
